--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
   "dependencies": {
     "md-svg-vue": "^1.0.6",
     "normalize.css": "^8.0.0",
-    "parse-magica-voxel": "^1.0.3",
+    "parse-magica-voxel": "http://github.com/IPRIT/parse-magica-voxel.git",
     "stats.js": "^0.17.0",
     "three": "^0.91.0",
     "three-orbit-controls": "^82.1.0",
