--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "write-file-webpack-plugin": "4.2.0"
   },
   "dependencies": {
+    "dat.gui": "^0.7.1",
     "md-svg-vue": "^1.0.6",
     "normalize.css": "^8.0.0",
     "parse-magica-voxel": "http://github.com/IPRIT/parse-magica-voxel.git",
