--- a/package.json
+++ b/package.json
@@ -108,13 +108,16 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "dat.gui": "^0.7.1",
+    "greenlet": "^0.1.2",
     "md-svg-vue": "^1.0.6",
     "normalize.css": "^8.0.0",
     "parse-magica-voxel": "^1.0.3",
+    "promise-worker": "^1.1.1",
     "stats.js": "^0.17.0",
     "three": "^0.91.0",
     "three-orbit-controls": "^82.1.0",
-    "vue-virtual-repeater": "^1.1.10"
+    "vue-virtual-repeater": "^1.1.10",
+    "worker-loader": "^1.1.1"
   },
   "peerDependencies": {
     "vue": "^2.5.0"
