--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "babel-plugin-transform-define": "^1.3.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.6.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "compass-mixins": "^0.12.10",
@@ -52,15 +52,15 @@
     "doiuse": "^4.0.0",
     "dotenv": "^4.0.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "3.0.2",
-    "friendly-errors-webpack-plugin": "1.6.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "function-bind": "1.1.1",
     "node-sass": "^4.7.2",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
     "optimize-js-plugin": "0.0.4",
     "postcss-flexbugs-fixes": "^3.2.0",
     "postcss-loader": "2.0.10",
-    "progress-bar-webpack-plugin": "1.10.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
     "ress": "1.2.2",
     "rimraf": "2.6.2",
     "sass-bem-utils": "^1.15.0",
@@ -71,18 +71,19 @@
     "style-loader": "0.19.1",
     "stylus": "0.54.5",
     "stylus-loader": "3.0.1",
-    "uglifyjs-webpack-plugin": "1.1.6",
-    "vue": "2.5.11",
-    "vue-loader": "13.7.0",
-    "vue-router": "3.0.1",
-    "vue-server-renderer": "2.5.11",
-    "vue-template-compiler": "2.5.11",
-    "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.9.2",
-    "webpack-bundle-size-analyzer": "2.7.0",
-    "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "4.1.1",
-    "write-file-webpack-plugin": "4.2.0"
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "vue": "^2.5.16",
+    "vue-loader": "^14.2.2",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.10.2",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-bundle-size-analyzer": "^2.7.0",
+    "webpack-cli": "^3.0.1",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2",
+    "write-file-webpack-plugin": "^4.3.2"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
