--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nuxtjs/axios": "^5.3.1",
     "@nuxtjs/component-cache": "^1.1.1",
     "@nuxtjs/router": "^1.0.1",
+    "bluebird": "^3.5.1",
+    "dat.gui": "^0.7.1",
     "event-source-polyfill": "^0.0.12",
     "lodash.clonedeep": "^4.5.0",
     "lodash.uniq": "^4.5.0",
@@ -32,18 +34,15 @@
     "md-svg-vue": "^1.0.6",
     "normalize.css": "^8.0.0",
     "nuxt": "^1.4.0",
-    "ssr-intersection-observer": "^0.5.0",
-    "vue-virtual-repeater": "^1.1.15",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
-    "@xailabs/three-renderer-stats": "^1.0.4",
-    "bluebird": "^3.5.1",
-    "dat.gui": "^0.7.1",
     "parse-magica-voxel": "https://github.com/IPRIT/parse-magica-voxel.git",
     "runtime-shaderfrog": "^0.2.0",
+    "ssr-intersection-observer": "^0.5.0",
     "stats.js": "^0.17.0",
     "three": "^0.91.0",
     "three-orbit-controls": "^82.1.0",
+    "vue-virtual-repeater": "^1.1.15",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
     "webworker-promise": "^0.4.1",
     "worker-loader": "^1.1.1"
   },
@@ -78,6 +77,7 @@
     "sass-bem-utils": "^1.15.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.5.0",
-    "stats.js": "^0.17.0"
+    "stats.js": "^0.17.0",
+    "three-webgl-stats": "^1.0.5"
   }
 }
