--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.5.1",
     "dat.gui": "^0.7.1",
     "event-source-polyfill": "^0.0.12",
+    "eventemitter3": "^3.1.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.uniq": "^4.5.0",
     "lru-cache": "^4.1.3",
@@ -36,6 +37,7 @@
     "nuxt": "^1.4.0",
     "parse-magica-voxel": "https://github.com/IPRIT/parse-magica-voxel.git",
     "runtime-shaderfrog": "^0.2.0",
+    "socket.io-client": "^2.1.1",
     "ssr-intersection-observer": "^0.5.0",
     "stats.js": "^0.17.0",
     "three": "^0.91.0",
